<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NeuroStare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Elements:</string>
    <string name="muse_alpha">Alpha Relative:</string>
    <string name="muse_beta">Beta Relative:</string>
    <string name="muse_theta">Theta Relative:</string>
    <string name="muse_delta">Delta Relative:</string>
    <string name="muse_gamma">Gamma Relative:</string>
    <string name="muse_alpha_score">Alpha Score:</string>
    <string name="muse_beta_score">Beta Score:</string>
    <string name="muse_theta_score">Theta Score:</string>
    <string name="muse_delta_score">Delta Score:</string>
    <string name="muse_gamma_score">Gamma Score:</string>
    <string name="muse_time_since_blink">Seconds Since Last Blink:</string>
    <string name="muse_blink_average">Blink Average:</string>

</resources>
