<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/refresh" />
            <Button
                android:id="@+id/connect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/connect" />
            <Button
                android:id="@+id/disconnect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/disconnect" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:text="@string/status" />
        <TextView
            android:id="@+id/con_status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:text="@string/undefined" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:text="@string/muse_time_since_blink" />

        <TextView
            android:id="@+id/secondsSinceBlink"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:text="@string/init_val" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personName"
            android:hint="Your Name"
            android:inputType="textPersonName" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameName"
            android:hint="Name of game you want to join" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/version"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/undefined"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <Button
                android:id="@+id/pause"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/pause" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Check if hosting the game"
            android:id="@+id/isHost"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join!"
            android:id="@+id/joinGame"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
